<?xml version="2.0"?>
<package format="3">
  <name>zima_base</name>
  <version>0.1.1</version>
  <description>The base code for project Zima: data classes, utils, HAL interfaces, sensors, controllers, simulation, and logging.</description>
  <maintainer email="sarah_wxp@foxmail.com">Your Name</sarah_wxp>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>protobuf</depend>
  <depend>gflags</depend>
  <depend>glog</depend>

  <exec_depend>pthread</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>